force-app/main/default/objects/License_Registration__c/fields/accAlreadyCreated__c.field-meta.xml
<CustomField>
    <fullName>accAlreadyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>accAlreadyCreated</label>
    <type>Checkbox</type>
</CustomField>