force-app/main/default/objects/License_Registration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Licenses &amp; Registrations as Business</relationshipLabel>
    <relationshipName>Licenses_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>