force-app/main/default/objects/License_Registration__c/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <inlineHelpText>This is a required field if you are submitting online.</inlineHelpText>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>