force-app/main/default/objects/License_Registration__c/fields/Agent_Authorization_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Agent_Authorization_Confirmation__c</fullName>
    <formula>"By entering my name as a digital signature below, I understand that my authorization will remain in effect until further notice and that the information will be handled confidentially and in compliance with applicable laws."
&amp;BR()
&amp;BR()&amp;
"I understand that I may revoke the authorization at any time by written and dated communication. I have read and understand the nature of this release. I declare under penalty of perjury by the laws of the State of California that the foregoing is true and correct."
&amp;BR()
&amp;BR()&amp;
"I certify that all of the content in this release is true and that this e-signature is both legal and binding."</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Authorization Confirmation</label>
    <type>Text</type>
</CustomField>