force-app/main/default/objects/License_Registration__c/fields/Amount_Paid_Online__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Online__c</fullName>
    <description>Total Amount paid via Chargent. Populated via DLRS rollup.</description>
    <label>Amount Paid Online</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>