force-app/main/default/objects/License_Registration__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The person who submitted the Registration. Email alerts will be sent to this person.</inlineHelpText>
    <label>Community User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Licenses &amp; Registrations as Applicant</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>