force-app/main/default/objects/License_Registration__c/fields/Applicant_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Agreement__c</fullName>
    <description>Used in Registration forms.</description>
    <formula>"I hereby authorize the Division of Labor Standards Enforcement (DLSE) Licensing &amp; Registration Unit to release information regarding my application to the below listed individuals. (Click 'Add Agent' to add individuals.)"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Agreement</label>
    <type>Text</type>
</CustomField>