force-app/main/default/objects/License_Registration__c/fields/Applicant_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Email__c</fullName>
    <formula>Applicant__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All communications will be sent to the Applicant's email address.</inlineHelpText>
    <label>Community Email</label>
    <type>Text</type>
</CustomField>