force-app/main/default/objects/License_Registration__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <formula>CASE( RecordType.DeveloperName 
, 'Car_Wash', 'Registration' 
, 'Child_Performer_Services', 'Permit' 
, 'Janitorial', 'Registration' 
, 'Garment_Manufacturers_and_Contractors', 'Registration'
, 'Other', 'Registration'
, 'Talent_Agency', 'License'
, 'Public_Works', 'Registration'
, 'Entertainment_Work', 'Permit' 
, 'Permit_to_Employ_Minors', 'Permit'
, 'Farm_Labor_Contractor', 'License'  
, '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>