force-app/main/default/objects/License_Registration__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in a conga workflow that sends a license to the applicant.</description>
    <label>Approved?</label>
    <type>Checkbox</type>
</CustomField>