force-app/main/default/objects/License_Registration__c/fields/Auto_Renew_Record__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Record__c</fullName>
    <formula>AND ( 
( Approval_Date_Time__c - Payment_Date_Time__c  )*24  &lt; 1,
 ISPICKVAL( Service_Type__c , 'Renewal'),
 ISPICKVAL(Status__c  , 'Approved'),
 ISPICKVAL(Submission_Type__c , 'Online'),
 ISBLANK(Assigned_Deputy__c)
)</formula>
    <label>Auto Renew Record</label>
    <type>Checkbox</type>
</CustomField>