force-app/main/default/objects/License_Registration__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>calculates the balance due with zero being the lowest it can be.</description>
    <formula>MAX(Amount_Due__c -   Amount_Paid_Manually__c -  Amount_Paid_Online__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>