force-app/main/default/objects/License_Registration__c/fields/Business_does_not_have_customers__c.field-meta.xml
<CustomField>
    <fullName>Business_does_not_have_customers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Janitorial registrations who do not have customers</description>
    <label>No customers/businesses</label>
    <type>Checkbox</type>
</CustomField>