force-app/main/default/objects/License_Registration__c/fields/Business_does_not_have_subcontractor_txt__c.field-meta.xml
<CustomField>
    <fullName>Business_does_not_have_subcontractor_txt__c</fullName>
    <formula>IF(Business_does_not_have_subcontractors__c==TRUE, "TRUE", "FALSE")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business does not have subcontractor txt</label>
    <type>Text</type>
</CustomField>