force-app/main/default/objects/License_Registration__c/fields/Business_does_not_have_subcontractors__c.field-meta.xml
<CustomField>
    <fullName>Business_does_not_have_subcontractors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business does not have subcontractors</label>
    <type>Checkbox</type>
</CustomField>