force-app/main/default/objects/License_Registration__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>Used by Garment to select the type of business.</description>
    <label>Select Manufacturer if you sell garments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturer</fullName>
                <label>Manufacturer (seller or reseller)</label>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>