force-app/main/default/objects/License_Registration__c/fields/Carpenter__c.field-meta.xml
<CustomField>
    <fullName>Carpenter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Carpenter</label>
    <type>Checkbox</type>
</CustomField>