force-app/main/default/objects/License_Registration__c/fields/Carpet_Linoleum_Resilient_Tile_Layer__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Linoleum_Resilient_Tile_Layer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Carpet, Linoleum, Resilient Tile Layer</label>
    <type>Checkbox</type>
</CustomField>