force-app/main/default/objects/License_Registration__c/fields/Cement_Mason__c.field-meta.xml
<CustomField>
    <fullName>Cement_Mason__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Cement Mason</label>
    <type>Checkbox</type>
</CustomField>