force-app/main/default/objects/License_Registration__c/fields/CertifyDate__c.field-meta.xml
<CustomField>
    <fullName>CertifyDate__c</fullName>
    <inlineHelpText>You must enter today's date for the certify date section.</inlineHelpText>
    <label>Certify Date</label>
    <type>Date</type>
</CustomField>