force-app/main/default/objects/License_Registration__c/fields/Company_Ownership_Section_Complete__c.field-meta.xml
<CustomField>
    <fullName>Company_Ownership_Section_Complete__c</fullName>
    <description>Used in validation rule to enforce form completion.</description>
    <label>Company Ownership Section Complete?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>