force-app/main/default/objects/License_Registration__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>Mapped to Entity_Type__c Account field.</description>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>LLP LP</fullName>
            </value>
            <value>
                <fullName>Public Entity</fullName>
            </value>
            <value>
                <fullName>Professional Corporation</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Advocate Organization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Individual Permit</fullName>
            </value>
            <value>
                <fullName>Permit to Employ Minors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>