force-app/main/default/objects/License_Registration__c/fields/CompanyAddressInformationDA__c.field-meta.xml
<CustomField>
    <fullName>CompanyAddressInformationDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Address Information DA</label>
    <type>Checkbox</type>
</CustomField>