force-app/main/default/objects/License_Registration__c/fields/CompanyContactDA__c.field-meta.xml
<CustomField>
    <fullName>CompanyContactDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Contact DA</label>
    <type>Checkbox</type>
</CustomField>