force-app/main/default/objects/License_Registration__c/fields/CompanyInformationReviewed__c.field-meta.xml
<CustomField>
    <fullName>CompanyInformationReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Information Reviewed?</label>
    <type>Checkbox</type>
</CustomField>