force-app/main/default/objects/License_Registration__c/fields/CompanyManagersReviewed__c.field-meta.xml
<CustomField>
    <fullName>CompanyManagersReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Managers Reviewed?</label>
    <type>Checkbox</type>
</CustomField>