force-app/main/default/objects/License_Registration__c/fields/CompanyNameTypeDA__c.field-meta.xml
<CustomField>
    <fullName>CompanyNameTypeDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Name &amp; Type DA</label>
    <type>Checkbox</type>
</CustomField>