force-app/main/default/objects/License_Registration__c/fields/CompanyOwnersDA__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwnersDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Owners DA</label>
    <type>Checkbox</type>
</CustomField>