force-app/main/default/objects/License_Registration__c/fields/CompanyTypeReviewed__c.field-meta.xml
<CustomField>
    <fullName>CompanyTypeReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Type Reviewed?</label>
    <type>Checkbox</type>
</CustomField>