force-app/main/default/objects/License_Registration__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pw craft</description>
    <label>Consultant</label>
    <type>Checkbox</type>
</CustomField>