force-app/main/default/objects/License_Registration__c/fields/CSLB_License_Required__c.field-meta.xml
<CustomField>
    <fullName>CSLB_License_Required__c</fullName>
    <label>CSLB/License Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>None Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>