force-app/main/default/objects/License_Registration__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <formula>DATEVALUE(Created_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>