force-app/main/default/objects/License_Registration__c/fields/Date_Deputy_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Deputy_Assigned__c</fullName>
    <label>Date Deputy Assigned</label>
    <type>Date</type>
</CustomField>