force-app/main/default/objects/License_Registration__c/fields/Date_First_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Approved__c</fullName>
    <description>Updated via Registration Flow &gt; Registration Approval Flow</description>
    <label>Date First Approved</label>
    <type>DateTime</type>
</CustomField>