force-app/main/default/objects/License_Registration__c/fields/Date_Formed__c.field-meta.xml
<CustomField>
    <fullName>Date_Formed__c</fullName>
    <label>Date Formed</label>
    <type>Date</type>
</CustomField>