force-app/main/default/objects/License_Registration__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <description>Populated via DLRS from Chargent Order.</description>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>