force-app/main/default/objects/License_Registration__c/fields/Defect_Date__c.field-meta.xml
<CustomField>
    <fullName>Defect_Date__c</fullName>
    <description>Most recent date that the application was defected.</description>
    <inlineHelpText>Most recent date that the application was defected.</inlineHelpText>
    <label>Defect Date</label>
    <type>Date</type>
</CustomField>