force-app/main/default/objects/License_Registration__c/fields/Denial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Denial_End_Date__c</fullName>
    <description>For all registrations types except for EWP and PWCR</description>
    <inlineHelpText>Enter Denial End Date</inlineHelpText>
    <label>Denial End Date</label>
    <type>Date</type>
</CustomField>