force-app/main/default/objects/License_Registration__c/fields/Denial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Denial_Start_Date__c</fullName>
    <description>For All Registration types except for EWP and PWCR.</description>
    <inlineHelpText>Enter Denial Start Date</inlineHelpText>
    <label>Denial Start Date</label>
    <type>Date</type>
</CustomField>