force-app/main/default/objects/License_Registration__c/fields/Disclaimer_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_Accepted__c</fullName>
    <formula>IF(
AND(
  ISPICKVAL(I_Agree_YesNo__c, "Yes") ,
NOT(ISBLANK( Enter_Your_Name__c ))
), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclaimer Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>