force-app/main/default/objects/License_Registration__c/fields/Disclaimer_AND_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_AND_Company_Type__c</fullName>
    <formula>IF( 
AND( 
 Disclaimer_Accepted__c = 1, 
NOT(ISBLANK(  Account_Email__c  )) 
), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclaimer AND Company Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>