force-app/main/default/objects/License_Registration__c/fields/Disclaimer_Complete__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated via WF Rule when Disclaimer section of Registration is completed.</description>
    <label>Disclaimer Complete</label>
    <type>Checkbox</type>
</CustomField>