force-app/main/default/objects/License_Registration__c/fields/displayRenewalButton__c.field-meta.xml
<CustomField>
    <fullName>displayRenewalButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>displayRenewalButton</label>
    <type>Checkbox</type>
</CustomField>