force-app/main/default/objects/License_Registration__c/fields/Disqualification_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Start_Date__c</fullName>
    <label>Disqualification Start Date</label>
    <type>Date</type>
</CustomField>