force-app/main/default/objects/License_Registration__c/fields/Documentation_III_DA__c.field-meta.xml
<CustomField>
    <fullName>Documentation_III_DA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation III DA</label>
    <type>Checkbox</type>
</CustomField>