force-app/main/default/objects/License_Registration__c/fields/DocumentationIDA__c.field-meta.xml
<CustomField>
    <fullName>DocumentationIDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation I DA</label>
    <type>Checkbox</type>
</CustomField>