force-app/main/default/objects/License_Registration__c/fields/DocumentationIIDA__c.field-meta.xml
<CustomField>
    <fullName>DocumentationIIDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation II DA</label>
    <type>Checkbox</type>
</CustomField>