force-app/main/default/objects/License_Registration__c/fields/DocumentationIIReviewed__c.field-meta.xml
<CustomField>
    <fullName>DocumentationIIReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation II Reviewed</label>
    <type>Checkbox</type>
</CustomField>