force-app/main/default/objects/License_Registration__c/fields/DocumentationIReviewed__c.field-meta.xml
<CustomField>
    <fullName>DocumentationIReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation I Reviewed</label>
    <type>Checkbox</type>
</CustomField>