force-app/main/default/objects/License_Registration__c/fields/Does_Company_Have_Employees__c.field-meta.xml
<CustomField>
    <fullName>Does_Company_Have_Employees__c</fullName>
    <label>Does Company Have Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>