force-app/main/default/objects/License_Registration__c/fields/Drawloop_Next_PW_RegistrationDocEmail__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_PW_RegistrationDocEmail__c</fullName>
    <description>Send PW Affidavit on Submission
Nintex package: "Registration Send Affidavit on Submission PW"
Delivery Option 1: "Email Affidavit PDF Approved"
Delivery Option 2: "Email Affidavit PDF Check Payment Pending"</description>
    <formula>"SFLicense_Registration__c:" &amp; Id &amp; ";DDPId:a0Gt0000008T6rp;Deploy:" &amp; IF(Status_of_Payment__c ="Paid / No Balance Due","a0Et0000009L6Sj", "a0Et0000009L6Sk") &amp; ";DeployType:autoemail"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop_Next_PW_RegistrationDocEmail</label>
    <type>Text</type>
</CustomField>