force-app/main/default/objects/License_Registration__c/fields/Drawloop_Next_RegAttach__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_RegAttach__c</fullName>
    <description>Attach application summary to registration on submission, see process builder.
Nintex package:" Registration Send Application by Automation"
Delivery Option: "Attached Application Print at Submission"</description>
    <formula>"SFLicense_Registration__c:" &amp; Id &amp; ";DDPId:a0Gt0000008T6rs;Deploy:a0Et0000009L6Se"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop_Next_RegAttach</label>
    <type>Text</type>
</CustomField>